fix(core) : shift host to bulma build

--- a/src/assets/scss/bulma-build.scss
+++ b/src/assets/scss/bulma-build.scss
@@ -7,12 +7,18 @@
 
 // theme defaults must be explictly forwarded here, otherwise confusing error messages result from the lack of defaults.
 @forward "variables/initial-defaults";
-@use "variables/initial-defaults" as td;
+@use "variables/initial-defaults" as id;
 
 // the primary bulma forward must come before all usage to prevent issues where usage appears before the with() statement
 @forward "bulma/sass" with (
-    $custom-colors: td.$theme-bulma-custom-colors-merged
+    $custom-colors: id.$theme-bulma-custom-colors-merged
 );
+
+@if id.$enable-host {
+    :host {
+        @extend :root;
+    }
+}
 
 // use the oruga bulma theme
 @forward "components-build";
