--- a/src/assets/scss/utils/_root.scss
+++ b/src/assets/scss/utils/_root.scss
@@ -8,9 +8,3 @@
         )
     );
 }
-
-@if var.$enable-host {
-    :host {
-        @extend :root;
-    }
-}
